[gd_scene load_steps=4 format=2]

[ext_resource path="res://PauseMenue.gd" type="Script" id=1]
[ext_resource path="res://MainMenuAssets/Theme_Main.tres" type="Theme" id=2]
[ext_resource path="res://MainMenuAssets/Theme_Pause.tres" type="Theme" id=3]

[node name="PauseMenue" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 1.0
margin_right = 2.0
margin_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="VSplitContainer" type="VSplitContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="VSplitContainer"]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
color = Color( 0.0117647, 0.0117647, 0.0117647, 0.352941 )

[node name="BotomAnker" type="Control" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MediumAnker" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MediumAnker"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -529.0
margin_top = -399.0
margin_right = 555.0
margin_bottom = 37.0

[node name="HBoxContainer" type="HBoxContainer" parent="MediumAnker/HBoxContainer"]
margin_right = 411.0
margin_bottom = 436.0

[node name="Controls" type="PanelContainer" parent="MediumAnker/HBoxContainer/HBoxContainer"]
margin_right = 239.0
margin_bottom = 436.0
theme = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MediumAnker/HBoxContainer/HBoxContainer/Controls"]
margin_left = 5.0
margin_top = 5.0
margin_right = 234.0
margin_bottom = 431.0

[node name="Label" type="Label" parent="MediumAnker/HBoxContainer/HBoxContainer/Controls/VBoxContainer"]
margin_right = 229.0
margin_bottom = 38.0
theme = ExtResource( 2 )
text = " Keyboard Controls  "
align = 1
valign = 1

[node name="RichTextLabel" type="RichTextLabel" parent="MediumAnker/HBoxContainer/HBoxContainer/Controls/VBoxContainer"]
margin_top = 42.0
margin_right = 229.0
margin_bottom = 190.0
theme = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[table=<3>][cell]Move [/cell][cell]    [/cell][cell]W, A, S, D[/cell]

[cell]Look  [/cell][cell]    [/cell][cell]Mouse[/cell]

[cell]Jump [/cell][cell]    [/cell][cell]Space[/cell]

[cell]Dash  [/cell][cell]    [/cell][cell]Shift[/cell]"
text = "Move     W, A, S, DLook      MouseJump     SpaceDash      Shift"
fit_content_height = true

[node name="Label2" type="Label" parent="MediumAnker/HBoxContainer/HBoxContainer/Controls/VBoxContainer"]
margin_top = 194.0
margin_right = 229.0
margin_bottom = 232.0
theme = ExtResource( 2 )
align = 1
valign = 1

[node name="Label3" type="Label" parent="MediumAnker/HBoxContainer/HBoxContainer/Controls/VBoxContainer"]
margin_top = 236.0
margin_right = 229.0
margin_bottom = 274.0
theme = ExtResource( 2 )
text = "Gamepad Controls"
align = 1
valign = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="MediumAnker/HBoxContainer/HBoxContainer/Controls/VBoxContainer"]
margin_top = 278.0
margin_right = 229.0
margin_bottom = 426.0
theme = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[table=<3>][cell]Move [/cell][cell]    [/cell][cell]Left Stick[/cell]

[cell]Look  [/cell][cell]    [/cell][cell]Right Stick[/cell]

[cell]Jump [/cell][cell]    [/cell][cell]A-Button[/cell]

[cell]Dash  [/cell][cell]    [/cell][cell]B-Button[/cell]"
text = "Move     Left StickLook      Right StickJump     A-ButtonDash      B-Button"
fit_content_height = true

[node name="Label" type="Label" parent="MediumAnker/HBoxContainer/HBoxContainer"]
margin_left = 243.0
margin_top = 199.0
margin_right = 411.0
margin_bottom = 237.0
theme = ExtResource( 2 )
text = "            "
align = 1
valign = 1

[node name="PanelContainer" type="PanelContainer" parent="MediumAnker/HBoxContainer"]
margin_left = 415.0
margin_right = 1084.0
margin_bottom = 436.0
theme = ExtResource( 2 )

[node name="Label" type="Label" parent="MediumAnker/HBoxContainer/PanelContainer"]
margin_left = 5.0
margin_top = 55.0
margin_right = 664.0
margin_bottom = 380.0
theme = ExtResource( 2 )
text = "Welcome to your dream.

This is the post LudumDare Game Jam version of the game.

How eternally wonderful it would be if there was no alarm 
 and you could just continue to dream this dream.

Search & destroy all alarms!"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MediumAnker"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 52.0
margin_left = -200.0
margin_top = 52.0
margin_right = 200.0
margin_bottom = 293.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 400, 100 )
alignment = 1

[node name="Restart_Button" type="Button" parent="MediumAnker/VBoxContainer"]
margin_top = 19.0
margin_right = 400.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../MainMenu_Button")
focus_neighbour_bottom = NodePath("../Continue_Button")
mouse_filter = 1
theme = ExtResource( 3 )
text = "Restart Level"

[node name="Spacing" type="Label" parent="MediumAnker/VBoxContainer"]
margin_top = 76.0
margin_right = 400.0
margin_bottom = 90.0

[node name="Continue_Button" type="Button" parent="MediumAnker/VBoxContainer"]
margin_top = 94.0
margin_right = 400.0
margin_bottom = 147.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../Restart_Button")
focus_neighbour_bottom = NodePath("../MainMenu_Button")
theme = ExtResource( 3 )
text = "Continue"

[node name="Spaceing" type="Label" parent="MediumAnker/VBoxContainer"]
margin_top = 151.0
margin_right = 400.0
margin_bottom = 165.0

[node name="MainMenu_Button" type="Button" parent="MediumAnker/VBoxContainer"]
margin_top = 169.0
margin_right = 400.0
margin_bottom = 222.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../Continue_Button")
focus_neighbour_bottom = NodePath("../Restart_Button")
theme = ExtResource( 3 )
text = "Main Menu"

[connection signal="pressed" from="MediumAnker/VBoxContainer/Restart_Button" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/Continue_Button" to="." method="_on_ContinetButton_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/MainMenu_Button" to="." method="_on_MainMenu_Button_pressed"]
